# StereoCameraLib

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  unit_tests.cpp
cmake/: finetune.cmake  hikvision.cmake  opencv.cmake
experiment/: CMakeLists.txt  stereo_grab.cpp  stereo_match.cpp
hikvision_camera/: CMakeLists.txt  MyCamera.cpp  MyCamera.h  hikvision_double_camera.cpp  hikvision_double_camera.h  stereo_clib.cpp  stereo_clib.h
package/: binding.gyp  hello.cc  hello.js
process/: celiang.txt  process.py  transform.py
src/: CMakeLists.txt
src/experiment/: stereo_grab.cpp  stereo_match.cpp
src/impl/: MyCamera.cpp  hikvision_double_camera.cpp  stereo_clib.cpp
src/include/: MyCamera.h  config.h  config.hpp  debug.h  hikvision_double_camera.h  stereo_clib.h
stereo_lib/: CMakeLists.txt  stereo_clib.cpp  stereo_clib.h
test/: CMakeLists.txt  TestStereoCamearLib.cpp  testImageProcess.cpp  unit_tests.cpp
